--- a/Specify/help/SpecifyHelp/Workbench/ExampleFiles.html
+++ b/Specify/help/SpecifyHelp/Workbench/ExampleFiles.html
@@ -9,9 +9,9 @@
 <h2>Examples </h2>
 <hr>
 <p>Example files and images are included with the WorkBench and can be imported for testing the various functions of the WorkBench. These are located in the Examples/Files directory. 
-Each file includes several columns representing  different discipline specific fields. Each file also includes columns that do not map in the Mapping editor 
-to illustrates the operation of the mapping function. The resulting Data Sets from these files will exhibit different functionality 
-in the BioGeomancer(<img src="../images/biogeomancer16x16.png" alt="biogeo" width="16" height="16">) and Google Earth (<img src="../images/GoogleEarth16x16.png" alt="ge" width="16" height="16">) tools. The files are listed by discipline.</p>
+Each file includes several columns representing  different discipline specific fields. Each file also includes columns that do not map in the WorkBench Data Set Mapping Editor 
+to illustrate the operation of this function. The resulting Data Sets from these files will exhibit different functionality 
+in the BioGeomancer(<img src="../images/biogeomancer16x16.png" alt="biogeo" width="16" height="16">) and Google Earth (<img src="../images/GoogleEarth16x16.png" alt="ge" width="16" height="16">) tools. The features of each file are listed below by discipline.</p>
 <p><u>Ornithology MS Excel file</u> - 41 records of various species from China</p>
 <p>Tissue # and Collector # do not map<br>
   BioGeomancer - the tool is inactive because the county field is missing which is evident in the tooltip for this tool<br>
@@ -27,7 +27,7 @@ in the BioGeomancer(<img src="../images/biogeomancer16x16.png" alt="biogeo" widt
 <p><u>Ichthyology MS Excel file</u> - 201 records of various tissues collected in the Seychelles</p>
 <p>File or URL link and Voucher # fields do not map<br>
   BioGeomancer returns 116 results for the given data set<br>
-  Google Earth displays the records and associated data together with specimen images. The File or URL link field has been formatted to allow linking of http addresses for images. These show up in the tool tip of each record and can be clicked on to view full size in a browser window.</p>
+  Google Earth displays the records and associated data together with specimen images. The File or URL link field has been formatted with HTML code to allow linking of the images into each pushpin balloon in Google Earth. These can be clicked on to view full size in a browser window.</p>
 <p><u>Herpetology MS Excel file</u> - 30 records of various species collected in Dominican Republic, Haiti, El Salvador and the Philippines.</p>
 <p>Type Status field does not map<br>
   BioGeomancer returns 8 results for the given Data Set<br>
