--- a/Specify/help/SpecifyHelp/Workbench/Formats.html
+++ b/Specify/help/SpecifyHelp/Workbench/Formats.html
@@ -20,7 +20,8 @@
 <p>The catalog number field will accept&nbsp;numbers and decimal numbers as well as a number together with your institution or catalog series (if you use this function in Specify 5) acronym e.g 1234, 1234.5, KU 1234 or KU1234.&nbsp; This information will be parsed when imported into Specify 6.</p>
 <p>&nbsp;</p>
 <h3><strong><u>Dates</u></strong></h3>
-<p>Dates are accepted as day month year, month day year or partial varieties of these. For partial dates zero&rsquo;s should be used in the format selected.</p>
+<p>Dates are accepted as day month year, month day year, year month day or partial varieties of these. For partial dates zero&rsquo;s should be used in the format selected.</p>
+<br>
 <table border="0" cellpadding="0">
   <tr>
     <td><p>Months as   1-12</p></td>
@@ -60,7 +61,7 @@
 <h3><strong><u>Latitude and Longitude</u></strong></h3>
 <p>+/- and N, S, E, W formats are both accepted as hemisphere information.</p>
 <p>Both d and &deg; are accepted for degrees, while ' and &quot; are accepted for minutes and seconds.&nbsp; A space is also accepted in place of or together with all of these.</p>
-<p>Decimal places for decimal degrees, minutes and seconds are unlimited.&nbsp; However, when using the Lat Long Converter {make this a link}, these will be truncated to 4 decimals for decimal degrees and two decimals for minutes and seconds.&nbsp; Therefore make sure that you have included the LatText1 and LongText1 fields to preserve your original input values.</p>
+<p>Decimal places for decimal degrees, minutes and seconds are unlimited.&nbsp; However, when using the Lat Long Converter, these will be truncated to 4 decimals for decimal degrees and two decimals for minutes and seconds.&nbsp; Therefore make sure that you have included the LatText1 and LongText1 fields to preserve your original input values.</p>
 <p>Some examples of accepted formats follow</p>
 <p><u>Degrees Minutes Seconds</u></p>
 <p>32 45 16.8232<br>
