--- a/Specify/help/SpecifyHelp/Workbench/Overview.html
+++ b/Specify/help/SpecifyHelp/Workbench/Overview.html
@@ -39,7 +39,7 @@
 <p>The WorkBench  also enables  each record to link to an image within a Data Set. The linked images display in an image window that can be toggled on or off. This is particularly useful for entering data from  scanned catalog cards or specimen labels. <br>
 </p>
 <h3><u>Using the WorkBench </u></h3>
-<p>Before using The WorkBench, it is important to understand its components and how they interact with each other. The two major components of the WorkBench are the Sidebar and  Workspace. </p>
+<p>Before using The WorkBench, it is important to understand its components and how they interact with each other. The two major components of the WorkBench are the Sidebar and  Workspace (the following diagrams are from Mac OS X, but the application is set up identically on Window and Linux). </p>
 <p align="center"><img src="../images/openscreen1.png" alt="open screen"></p>
 <p align="center" class="imgcaption">WorkBench</p>
 <br>
