--- a/trunk/Specify/help/SpecifyHelp/Workbench/RecordMappingTool.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/RecordMappingTool.html
@@ -11,8 +11,8 @@
 <p>The Record Mapping Tool   displays  the Latitude and Longitude points as a green dot on a satellite map. The map includes rivers and political boundary overlays. The maps are obtained from a pair of map servers, one hosted by NASA and one hosted at the University of Kansas.&nbsp; </p>
 <h3><u>Requirements</u></h3>
 <ul>
-  <li>latitude1 </li>
-  <li> longitude1 </li>
+  <li>Latitude1 </li>
+  <li>Longitude1 </li>
 </ul>
 <p>To map geocoordinates, sweep records in a Data Set to select them  and click the Record Mapping Tool button (<img src="../images/map.png" alt="map" width="32" height="32">). To map an entire Data Set either select all the records or no records.</p>
 <p align=center><img src="../images/georeferencemap.png" alt="Georeferencemap"></p>
