--- a/trunk/Specify/help/SpecifyHelp/Workbench/ExampleFiles.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ExampleFiles.html
@@ -11,17 +11,17 @@
 <p>Example files and images are included with the WorkBench and can be imported for testing the various functions of the WorkBench. These are located in the Examples/Files directory. 
 Each file includes several columns representing  different discipline specific fields. Each file also includes columns that do not map in the WorkBench Data Set Mapping Editor 
 to illustrate the operation of this function. The resulting Data Sets from these files will exhibit different functionality 
-in the BioGeomancer(<img src="../images/biogeomancer16x16.png" alt="biogeo" width="16" height="16">) and Google Earth (<img src="../images/GoogleEarth16x16.png" alt="ge" width="16" height="16">) tools. The features of each file are listed below by discipline.</p>
+in the BioGeomancer(<img src="../images/biogeomancer16x16.png" alt="biogeo" width="16" height="16">) and Google Earth (<img src="../images/GoogleEarth16x16.png" alt="ge" width="16" height="16">) tools. The features of each file are listed below by discipline.  The Ichthyology and Botany files have been imported into the WorkBench at startup.</p>
 <p><u>Ornithology MS Excel file</u> - 41 records of various species from China</p>
-<p>Tissue # and Collector # do not map<br>
+<p>Tissue number and Collector number fields do not map<br>
   BioGeomancer - the tool is inactive because the county field is missing which is evident in the tooltip for this tool<br>
   Google Earth displays the records and associated data</a></p>
 <p><u>Botany MS Excel file</u> - 74 records of various species collected in Douglas County, Kansas</p>
-<p>Phenology, Locality Remarks and General Remarks do not map<br>
+<p>Phenology and General Remarks fields do not map<br>
   BioGeomancer returns 51 results for the given data set<br>
   Google Earth displays the records and associated data</p>
 <p><u>Entomology MS Excel file</u> - 39 records of various species collected in Kansas and Peru</p>
-<p>Determiner field does not map<br>
+<p>All fields automap<br>
   BioGeomancer returns 1 result for the given data set<br>
   Google Earth displays the records and associated data</p>
 <p><u>Ichthyology MS Excel file</u> - 201 records of various tissues collected in the Seychelles</p>
@@ -29,11 +29,11 @@ in the BioGeomancer(<img src="../images/biogeomancer16x16.png" alt="biogeo" widt
   BioGeomancer returns 116 results for the given data set<br>
   Google Earth displays the records and associated data together with specimen images. The File or URL link field has been formatted with HTML code to allow linking of the images into each pushpin balloon in Google Earth. These can be clicked on to view full size in a browser window.</p>
 <p><u>Herpetology MS Excel file</u> - 30 records of various species collected in Dominican Republic, Haiti, El Salvador and the Philippines.</p>
-<p>Type Status field does not map<br>
+<p>All fields automap<br>
   BioGeomancer returns 8 results for the given Data Set<br>
   Google Earth displays the records and associated data</p>
 <p><u>Mammalogy MS Excel file</u> - 43 records of various species collected in the state of Maine</p>
-<p>Collector number and Remarks fields do not map<br>
+<p>Collector number field does not map<br>
   Biogeomancer returns 42 results for the given Data Set<br>
   Google Earth displays the records and associated data</p>
 <p>&nbsp;</p>
