Last checkin hopefull, fixes GoogleEarth problem

--- a/Specify/help/SpecifyHelp/Workbench/DataSetSummary.html
+++ b/Specify/help/SpecifyHelp/Workbench/DataSetSummary.html
@@ -8,7 +8,7 @@
 <body>
 <h2>Data Set Summary</h2>
 <hr>
-<p>The Data Set Summary report groups and counts and groups  unique items and displays them  in descending alphanumeric order. This provides   an overview of the values for any given column as well as a mechanism for checking the integrity of the data. </p>
+<p>The Data Set Summary report groups, and counts and groups,  unique items and displays them  in descending alphanumeric order. This provides   an overview of the values for any given column as well as a mechanism for checking the integrity of the data. </p>
 <p>The easiest way to create a Data Set Summary report is to 'drag and drop' a Data Set  onto  the Data Set Summary action on the sidebar. This eliminates the need to choose a Data Set for the report. </p>
 <p>Or, click the Data Set Summary action on the Sidebar. A file dialog will appear to choose a Data Set for the report. </p>
 <p> Next, choose a column  for the report: </p>
