--- a/Specify/help/SpecifyHelp/Workbench/Reports.html
+++ b/Specify/help/SpecifyHelp/Workbench/Reports.html
@@ -13,12 +13,12 @@
 <table width="75%" border="1" cellspacing="1" cellpadding="6">
   <tr>
     <td width="21%"><img src="../images/Reports16x16.png" width="16" height="16"> Data Set Summary </td>
-    <td width="79%">Groups and counts and groups  unique items and displays them  in descending alphanumeric order. This provides   an overview of the values for any given column as well as a mechanism for checking the integrity of the data. </td>
+    <td width="79%">Groups, and counts and groups,  unique items and displays them  in descending alphanumeric order. This provides   an overview of the values for any given column as well as a mechanism for checking the integrity of the data. </td>
   </tr>
   
   <tr>
     <td><img src="../images/BarGraph16x16.png" width="16" height="16"> Chart</td>
-    <td>Creates a graphic display of the counts of all the unique values for a single column (a graphical display of the Data Set Summary report). These graphs may not display correctly with large numbers of unique values. </td>
+    <td>Creates a bar chart of all the unique values in a single column. These graphs may not display correctly with large numbers of unique values. </td>
   </tr>
   <tr>
     <td><img src="../images/PieChart16x16.png" width="16" height="16"> Top 10 </td>
