--- a/trunk/Specify/help/SpecifyHelp/Workbench/ImportCSV.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ImportCSV.html
@@ -10,7 +10,7 @@
 <p>The WorkBench can easily import data from a CSV (comma separated value or comma delimited text) file into a new Data Set. </p>
 <p><em><strong>Notes:</strong></em> </p>
 <ul>
-  <li>Changes made to the data in the WorkBench will not be reflected in the original MS Excel file.</li>
+  <li>Changes made to the data in the WorkBench will not be reflected in the original CSV file.</li>
   <li> The WorkBench has a 2000 record maximum. Import files that include more than 2000 records will not import. </li>
 </ul>
 <p align="center"><img src="../images/importdialog.png" ></p>
