--- a/trunk/Specify/help/SpecifyHelp/Workbench/ImportImages.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/ImportImages.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h2>Import  Images</h2>
+<h2>To choose new column Import  Images</h2>
 <hr>
 <p>The Import Images action creates a new Data Set,  then reads in a group of images and links each one to its own record in the new Data Set.  Each image can then be viewed while entering data into its linked record in the Data Set.</p>
 <p><strong><em>Note</em>s:</strong> </p>
@@ -21,7 +21,7 @@
 <p align="center" class="imgcaption">Data Set Column Headings </p>
 <p>&nbsp;</p>
 <p>To copy a Data Set map from an existing Data Set, select the 'Use an existing Data Set mapping' button and choose the Data Set from the list provided. The Data Set Properties dialog will then open to name and describe the new Data Set. </p>
-<p>To choose new column headings to create a map for the Data Set select the 'Create new Data Set mapping' button and click 'OK':</p>
+<p>To choose new column headings to create a map for the Data Set, select the 'Create new Data Set mapping' button and click 'OK':</p>
 <p align="center"><img src="../images/DataSetMappingEditorClear.png" alt="Data Set Mapping Editor"></p>
 <p align="center" class="imgcaption">Data Set Mapping Editor</p>
 <p align="left">&nbsp;</p>
