--- a/trunk/Specify/help/SpecifyHelp/Workbench/Requirements.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/Requirements.html
@@ -13,7 +13,7 @@
   Minimum Memory 1GB<br>
 Disk 200MB</p>
 <p><u><strong>Mac OS X</strong></u><br>
-  10.4.1<br>
+  10.4.1+<br>
   Java 1.5.0_07<br>
   Minimum Memory 1GB<br>
 Disk 50MB</p>
@@ -22,7 +22,7 @@ Disk 50MB</p>
   Minimum Memory 1GB<br>
 Disk 200MB</p>
 <p><u><strong>Vista</strong></u><br>
-  (Minimal Testing was performed)<br>
+  (Minimal testing was performed)<br>
   Minimum Memory 1GB<br>
 Disk 200MB </p>
 <p>&nbsp;</p>
