--- a/trunk/Specify/help/SpecifyHelp/Workbench/TechnicalNotes.html
+++ b/trunk/Specify/help/SpecifyHelp/Workbench/TechnicalNotes.html
@@ -8,7 +8,5 @@
 <body>
 <h2>Technical Notes </h2>
 <hr>
-<p>Specify 6 is a complete rewrite using Java, which gives it the advantage of running identically on Windows, Linux and Mac OS X as well as enabling many other unique functionality. </p>
-<p>Mac OS X users need to have Java 1.5.x or above installed on their machines, most Mac OS X machines come fully loaded with Java and receive automatic updates. </p>
-<h3>&nbsp;</h3>
+<p>Specify 6 is a complete rewrite using Java, which gives it the advantage of running identically on Windows, Linux and Mac OS X as well as enabling many other new and unique features.</p>
 </html>
